[gd_scene load_steps=4 format=3 uid="uid://b4a2jw5epvnov"]

[ext_resource type="Theme" uid="uid://bywqqu0lkvhdn" path="res://game/ui/ccm_theme.tres" id="1_di6w7"]
[ext_resource type="Script" path="res://game/scripts/player_match_menu.gd" id="1_rux7s"]
[ext_resource type="PackedScene" uid="uid://doms5htaqorgw" path="res://game/scenes/join_match_prompt.tscn" id="2_cggl7"]

[node name="PlayerMatchMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_di6w7")
script = ExtResource("1_rux7s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateRoomButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CREATE MATCH"

[node name="JoinRoomButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "JOIN ROOM"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RoomBrowserButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "ROOM BROWSER"

[node name="JoinMatchPrompt" parent="." instance=ExtResource("2_cggl7")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
